--- a/gitops-bridge-workloads-demo/values.yaml
+++ b/gitops-bridge-workloads-demo/values.yaml
@@ -18,7 +18,7 @@ configMap:
       <body>
         <h1>Hello from ConfigMap!</h1>
         <h1>Thanks for sticking through the end of the demo</h1>
-        <h1>next session is about IDP - Port</h1>
+        <h1>next session is about Platform Engineering - Port</h1>
       </body>
     </html>
 
