--- a/gitops-bridge-workloads-demo/templates/deployment.yaml
+++ b/gitops-bridge-workloads-demo/templates/deployment.yaml
@@ -13,10 +13,11 @@ spec:
       {{- include "gitops-bridge-workloads-demo.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      {{- with .Values.podAnnotations }}
       annotations:
+        {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
-      {{- end }}
+        {{- end }}
+        checksum/config: {{ sha256sum .Values.configMap.htmlContent | quote }}
       labels:
         {{- include "gitops-bridge-workloads-demo.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
