--- a/gitops-bridge-workloads-demo/values.yaml
+++ b/gitops-bridge-workloads-demo/values.yaml
@@ -17,7 +17,7 @@ configMap:
       <head><title>Welcome to Azure user group event</title></head>
       <body>
         <h1>Welcome to Azure user group event</h1>
-        <h1>Hello from ConfigMap!</h1>
+        <h1>Hello from ConfigMap update 1</h1>
       </body>
     </html>
 
